# pmymd

./: .gitignore  README.md  pyproject.toml
pmymd/: __init__.py  __main__.py  builder.py  cli.py  config.py  parser.py  styles.py  syntax.py
